# PCB-Code

./: .gitignore  README.md  fp-lib-table  lunarvitals.kicad_pcb  lunarvitals.kicad_pro  lunarvitals.kicad_sch  lunarvitals_logo.kicad_mod  lunarvitals_logo_big.kicad_mod  sym-lib-table
peripheral_uart/: CMakeLists.txt  app.overlay  nrf5340dk_mcuboot_sr_net.conf  prj.conf  prj_cdc.conf
peripheral_uart/Dongle_Build/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
peripheral_uart/Dongle_Build/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
peripheral_uart/Dongle_Build/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  zephyr.dts  zephyr.dts.pre  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.map
peripheral_uart/dongle/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
peripheral_uart/dongle/zephyr/: .cmake.dotconfig.checksum  cmake_install.cmake  dts.cmake  (+14 more)
peripheral_uart/dongle_build/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
peripheral_uart/src/: BMP280.c  BMP280.h  MAX30102.c  MAX30102.h  MLX90614.c  MLX90614.h  MPU6050.c  MPU6050.h  adc.c  adc.h  aggregator.c  aggregator.h  heart_rate.c  heart_rate.h  i2c.c  i2c.h  main-old.c  main.c  spo2_algorithm.c  spo2_algorithm.h
(+150 files in other folders)
